--- a/Semi/WebContent/WEB-INF/web.xml
+++ b/Semi/WebContent/WEB-INF/web.xml
@@ -12,4 +12,11 @@
   <session-config>
   	<session-timeout>30</session-timeout>
   </session-config>
+  
+  
+  <!-- error페이지 -->
+  <error-page>
+  	<exception-type>java.lang.Exception</exception-type>
+  	<location>/WEB-INF/views/common/error.jsp</location>
+  </error-page>
 </web-app>
