[중간점검] 박요한 Merge

--- a/Semi/WebContent/WEB-INF/classes/sql/member/member-query.properties
+++ b/Semi/WebContent/WEB-INF/classes/sql/member/member-query.properties
@@ -2,3 +2,6 @@ selectOne = select * from member where member_id = ?
 insertMember = insert into member values(?, ?, ?, ?, ?, ?, ?, default, ?)
 findId = select * from member where name = ? and email = ? 
 findPassword = select * from member where member_id = ? and email = ?
+updateMember = update member set name= ?, email=?, phone=?, event1=?, event2=?  where member_id=?
+updatePassword = update member set password = ? where member_id = ?
+deleteMember = delete from member where member_id = ?
