[중간점검] 이승우 Merge

--- a/Semi/WebContent/WEB-INF/classes/sql/member/member-query.properties
+++ b/Semi/WebContent/WEB-INF/classes/sql/member/member-query.properties
@@ -5,3 +5,11 @@ findPassword = select * from member where member_id = ? and email = ?
 updateMember = update member set name= ?, email=?, phone=?, event1=?, event2=?  where member_id=?
 updatePassword = update member set password = ? where member_id = ?
 deleteMember = delete from member where member_id = ?
+selectListPage = select M.* from ( select rownum rnum, M.* from ( select * from member order by enroll_date desc ) M ) M where rnum between ? and ?
+selectMemberCount = select count(*) cnt from member
+searchListPage = select M.* from( select rownum rnum, M.* from ( select * from member where# )M )M where rnum between ? and ?
+searchMemberCount = select count(*) cnt from member where#
+updateMemberRole = update member set member_role = ? where member_id = ?
+updateMemberEvent = update member set event1 = ? where member_id = ?
+updateMemberEvent2 = update member set event2 = ? where member_id = ?
+deleteMemberAD = delete from member where member_id = ?
