0418중간커밋세미

--- a/Semi/WebContent/WEB-INF/classes/sql/member/member-query.properties
+++ b/Semi/WebContent/WEB-INF/classes/sql/member/member-query.properties
@@ -13,3 +13,5 @@ updateMemberRole = update member set member_role = ? where member_id = ?
 updateMemberEvent = update member set event1 = ? where member_id = ?
 updateMemberEvent2 = update member set event2 = ? where member_id = ?
 deleteMemberAD = delete from member where member_id = ?
+insertCertification = insert into pwd_certification values(seq_pwd_certification.nextval, ?, ?)
+selectCertification=select rownum, m.* from(select * from pwd_certification where id=? order by no desc)m where rownum=1
