--- a/Semi/.settings/org.eclipse.core.resources.prefs
+++ b/Semi/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
 encoding//WebContent/WEB-INF/views/board/boardList.jsp=UTF-8
+encoding//WebContent/WEB-INF/views/member/newpassword.jsp=UTF-8
