--- a/Semi/WebContent/WEB-INF/classes/sql/member/member-query.properties
+++ b/Semi/WebContent/WEB-INF/classes/sql/member/member-query.properties
@@ -15,3 +15,7 @@ updateMemberEvent2 = update member set event2 = ? where member_id = ?
 deleteMemberAD = delete from member where member_id = ?
 insertCertification = insert into pwd_certification values(seq_pwd_certification.nextval, ?, ?)
 selectCertification=select rownum, m.* from(select * from pwd_certification where id=? order by no desc)m where rownum=1
+selectMylist = select * from (select rownum rnum, m.* from (select * from meeting order by meeting_no desc) m) where rnum between 1 and 4
+selectMyAttach = select * from attachment where meeting_no = ? and status = 'Y'
+countMember=select count(*) from member
+meetingCount= select count(*) from meeting
