--- a/Semi/resources/sql/meeting/meeting-query.properties
+++ b/Semi/resources/sql/meeting/meeting-query.properties
@@ -1,2 +1,4 @@
 selectIndexRecentlist = select * from (select rownum rnum, m.* from (select * from meeting order by meeting_no desc) m) where rnum between 1 and 10
 selectAttachOne = select * from attachment where meeting_no = ? and status = 'Y'
+selectMeetingList = select * from(select rownum rnum, m.* from(select * from meeting m left join location l on m.location_code = l.lcode left join category c on m.category_code = c.ccode where m.category_code like '%@%' and m.location_code like '%#%' and m.title like '%$%' order by m.meeting_no desc)m) where rnum between ? and ?
+selectMeetingTotalContent = select count(*) from meeting where location_code like '%@%' and category_code like '%#%' and title like '%$%'
