--- a/Semi/resources/sql/board/board-query.properties
+++ b/Semi/resources/sql/board/board-query.properties
@@ -1,6 +1,6 @@
 selectBoardList = select * from (select rownum rnum, b.* from (select * from user_board order by board_no desc) b) where rnum between ? and ?
 selectBoardTotal = select count(*) from user_board
-insertBoard = insert into user_board values(seq_user_board.nextval, ?, ?, ?, sysdate)
+insertBoard = insert into user_board values(seq_user_board.nextval, ?, ?, ?, sysdate, 0)
 selectCommentCnt = select count(*) from user_board_comment where board_no=?
 selectBoardOne = select * from user_board where board_no = ?
 selectBoardNumList = select board_no from user_board order by board_no asc
@@ -11,8 +11,9 @@ insertComment = insert into user_board_comment values(seq_user_board_comment.nex
 deleteBoardComment = delete user_board_comment where comment_no = ?
 selectAdminBoardList = select * from (select rownum rnum, b.* from (select * from admin_board order by board_no desc) b) where rnum between ? and ?
 selectAdminBoardTotal = select count(*) from admin_board
-insertAdminBoard = insert into admin_board values(seq_admin_board.nextval, ?, ?, ?, sysdate)
+insertAdminBoard = insert into admin_board values(seq_admin_board.nextval, ?, ?, ?, sysdate, 0)
 selectAdminBoardOne = select * from admin_board where board_no = ?
 selectAdminBoardNumList = select board_no from admin_board order by board_no asc
 updateAdminBoard = update admin_board set title = ?, content = ? where board_no = ?
 deleteAdminBoard = delete admin_board where board_no = ?
+updateReadCnt = update user_board set read_cnt=read_cnt+1 where board_no = ?
