--- a/Semi/resources/sql/meeting/meeting-query.properties
+++ b/Semi/resources/sql/meeting/meeting-query.properties
@@ -2,3 +2,10 @@ selectIndexRecentlist = select * from (select rownum rnum, m.* from (select * fr
 selectAttachOne = select * from attachment where meeting_no = ? and status = 'Y'
 selectMeetingList = select * from(select rownum rnum, m.* from(select * from meeting m left join location l on m.location_code = l.lcode left join category c on m.category_code = c.ccode where m.category_code like '%@%' and m.location_code like '%#%' and m.title like '%$%' order by m.meeting_no desc)m) where rnum between ? and ?
 selectMeetingTotalContent = select count(*) from meeting where location_code like '%@%' and category_code like '%#%' and title like '%$%'
+selectOne = select * from meeting m left join category c on m.category_code = c.ccode left join location l on m.location_code = l.lcode where meeting_no = ?
+selectParticiCnt = select count(*) from participation where meeting_no = ? and status = 'Y'
+selectParticiList = select * from participation where meeting_no=? and status='Y'
+insertParticipation = insert into participation values(seq_participation.nextval, ?, ?, sysdate, 'Y')
+updateUnParticipation = update participation set status='N' where meeting_no=? and partici_id = ?
+deleteMeeting = delete meeting where meeting_no = ?
+updateMeeting = update meeting set title = ? ,content = ?, place = ?, time = ?, max_people = ?, cost = ?, category_code = ?, location_code = ? where meeting_no = ?
