--- a/Semi/resources/sql/meeting/meeting-query.properties
+++ b/Semi/resources/sql/meeting/meeting-query.properties
@@ -9,3 +9,7 @@ insertParticipation = insert into participation values(seq_participation.nextval
 updateUnParticipation = update participation set status='N' where meeting_no=? and partici_id = ?
 deleteMeeting = delete meeting where meeting_no = ?
 updateMeeting = update meeting set title = ? ,content = ?, place = ?, time = ?, max_people = ?, cost = ?, category_code = ?, location_code = ? where meeting_no = ?
+deleteAttachment = update attachment set status='N' where attach_no = ?
+insertAttach = insert into attachment values(seq_attachment.nextval, ?, ?, ?, 'Y')
+insertMeeting = insert into meeting values(seq_meeting.nextval, ?, ?, ?, sysdate, ?, ?, ?, ?, ?, ?)
+insertAttach2 = insert into attachment values(seq_attachment.nextval, seq_meeting.currval, ?, ?, 'Y')
