--- a/Semi/WebContent/WEB-INF/classes/sql/board/board-query.properties
+++ b/Semi/WebContent/WEB-INF/classes/sql/board/board-query.properties
@@ -17,3 +17,11 @@ selectAdminBoardNumList = select board_no from admin_board order by board_no asc
 updateAdminBoard = update admin_board set title = ?, content = ? where board_no = ?
 deleteAdminBoard = delete admin_board where board_no = ?
 updateReadCnt = update user_board set read_cnt=read_cnt+1 where board_no = ?
+selectMyBoardList = select * from(select rownum rnum, B.* from(select * from user_board B where writer = ? order by board_no desc) B) where rnum between ? and ?
+selectMyBoardTotal = select count(*) from user_board where writer = ?
+searchBoardList = select B.* from( select rownum rnum, B.* from( select * from user_board where# order by board_no desc) B)B where rnum between ? and ?
+searchBoardListCnt = select count(*) cnt from user_board where#
+searchAdminBoardList = select B.* from( select rownum rnum, B.* from( select * from admin_board where# order by board_no desc) B)B where rnum between ? and ?
+searchAdminBoardListCnt = select count(*) cnt from admin_board where#
+searchMyBoardList = select * from(select rownum rnum, B.* from(select * from user_board B where writer = ? and# order by board_no desc) B) where rnum between ? and ?
+searchMyBoardListCnt = select count(*) cnt from user_board where writer = ? and#
