--- a/Semi/resources/sql/member/member-query.properties
+++ b/Semi/resources/sql/member/member-query.properties
@@ -12,10 +12,12 @@ searchMemberCount = select count(*) cnt from member where#
 updateMemberRole = update member set member_role = ? where member_id = ?
 updateMemberEvent = update member set event1 = ? where member_id = ?
 updateMemberEvent2 = update member set event2 = ? where member_id = ?
-deleteMemberAD = delete from member where member_id = ?
+deleteMemberAD = insert into blackList values(seq_blackList.nextval, ?)
 insertCertification = insert into pwd_certification values(seq_pwd_certification.nextval, ?, ?)
 selectCertification=select rownum, m.* from(select * from pwd_certification where id=? order by no desc)m where rownum=1
 selectMylist = select * from (select rownum, p.* from (select * from participation  where partici_id = ? and status='Y' order by partici_no desc) p where rownum between 1 and 4) p left join meeting m on p.meeting_no = m.meeting_no
 selectMyAttach = select * from attachment where meeting_no = ? and status = 'Y'
 countMember=select count(*) from member
 meetingCount= select count(*) from meeting
+deleteCertification = delete pwd_certification where id = ?
+selectBlackList = select * from blackList where email = ?
