meetingView _ 참가자 채팅 구현

--- a/Semi/resources/sql/meeting/meeting-query.properties
+++ b/Semi/resources/sql/meeting/meeting-query.properties
@@ -13,3 +13,5 @@ deleteAttachment = update attachment set status='N' where attach_no = ?
 insertAttach = insert into attachment values(seq_attachment.nextval, ?, ?, ?, 'Y')
 insertMeeting = insert into meeting values(seq_meeting.nextval, ?, ?, ?, sysdate, ?, #, ?, ?, ?, ?)
 insertAttach2 = insert into attachment values(seq_attachment.nextval, seq_meeting.currval, ?, ?, 'Y')
+selectChat = select * from meeting_chat where meeting_no = ? order by no asc
+insertChat = insert into meeting_chat values(seq_meeting_chat.nextval, ?, ?, ?, sysdate)
