--- a/Semi/resources/sql/member/member-query.properties
+++ b/Semi/resources/sql/member/member-query.properties
@@ -20,4 +20,5 @@ selectMyAttach = select * from attachment where meeting_no = ? and status = 'Y'
 countMember=select count(*) from member
 meetingCount= select count(*) from meeting
 deleteCertification = delete pwd_certification where id = ?
-selectBlackList = select * from blackList where email = ?
+selectBlackList = select count(*) from blackList where email = ?
+selectEmail = select count(*) from member where email = ?
